--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,6 +52,8 @@ header h1 {
     text-align: center;
     box-shadow: 5px 5px 5px rgba(2, 2, 2, 0.479);
     transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+    width: calc(33.33% - 20px); /* Adjust width for desktop view */
+    box-sizing: border-box; /* Include padding and border in width calculation */
 }
 
 .main .grid_4:hover {
@@ -139,7 +141,7 @@ footer {
 
 
 footer h1 {
-    background: url(../IMG/BrendanPixel.png) no-repeat;
+    background: url('../IMG/BrendanPixel.png') no-repeat;
     background-size: cover;
     text-indent: -9999px;
     width: 200px;
@@ -172,8 +174,8 @@ footer p:hover {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
 }
 
-footer .h1-2{
-    background: url(../IMG/LOGO.png) no-repeat;
+footer .h1-2 {
+    background: url('../IMG/LOGO.png') no-repeat;
     background-size: cover;
     text-indent: -9999px;
     width: 80px;
@@ -221,34 +223,20 @@ footer .h1-2:hover {
     footer p {
         margin: 5px auto; /* Center align and adjust margins for footer text */
     }
-}
-
-@media (max-width: 768px) {
-    .main {
-        flex-wrap: wrap; /* Ensure grid items wrap on smaller screens */
-        justify-content: center; /* Center align grid items */
-    }
-
-    .grid_4 {
-        width: calc(100% - 20px); /* Adjust width to prevent overlapping */
-        margin-bottom: 20px; /* Add margin between grid items */
-        box-sizing: border-box; /* Include padding and border in width calculation */
-    }
 
     .main .grid_4 {
-        padding: 15px; /* Adjust padding for grid items */
+        width: calc(50% - 20px); /* Adjust width for two columns on mobile */
+        margin-bottom: 20px; /* Add margin between grid items */
     }
 
     .main .grid_4 p {
-        text-align: left; /* Ensure paragraph text aligns left on mobile */
-        font-size: 14px; /* Decrease font size for paragraph text */
-        margin: 10px 0; /* Adjust margins for paragraph text */
-        line-height: 1.5; /* Increase line height for better readability */
-        word-wrap: break-word; /* Break words to prevent horizontal overflow */
+        font-size: 14px; /* Decrease font size for paragraph text on mobile */
+        margin-top: 15px; /* Adjust margin for paragraph text on mobile */
+        line-height: 1.5; /* Increase line height for better readability on mobile */
     }
 
     .main .grid_4 h3 {
-        font-size: 20px; /* Decrease font size for heading text */
-        margin-bottom: 10px; /* Adjust margin for heading text */
+        font-size: 20px; /* Decrease font size for heading text on mobile */
+        margin-bottom: 10px; /* Adjust margin for heading text on mobile */
     }
 }
