--- a/CSS/style.css
+++ b/CSS/style.css
@@ -189,7 +189,7 @@ footer .h1-2:hover {
 /* Mobile responsiveness */
 @media (max-width: 768px) {
     .container_12 {
-        margin-top: 40px;
+        margin-top: 20px;
     }
     
     header h1 {
@@ -200,12 +200,10 @@ footer .h1-2:hover {
         display: block;
         width: 90%;
         margin: 0 auto;
-		background: powderblue;
-
     }
 
     .main .grid_4 {
-        width: auto;
+        width: 100%;
         margin-bottom: 20px;
     }
 
@@ -224,9 +222,6 @@ footer .h1-2:hover {
         transition: box-shadow 0.3s ease, transform 0.3s ease;
     }
 
-    .price p {
-        background: #ffffff;
-    }
     .note {
         width: 90%;
         margin: 20px auto;
@@ -235,7 +230,7 @@ footer .h1-2:hover {
 
     footer {
         text-align: center;
-        padding: 50px;
+        padding: 10px;
     }
 
     footer h1,
