--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,7 +18,7 @@
 /* General Styles */
 body {
     background-color: #F5F5F5;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif required!;
     color: #000000;
     margin: 0;
     padding: 0;
